Combine CSS to reduce HTTP requests by five.
Now that the Dijit and Claro code is gone, it was a good time to
use SASS partials to combine the former five extra CSS files into our
master SASS styles file using imports. The IE7 and IE8 CSS files are
still external since they are normally not loaded, but now they too
have a SASS source file so all our CSS editing can be done in one
place (/sass/). (#86)

--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -14,17 +14,9 @@
         {% block more_meta_link %}{% endblock %}
 
         {# CSS goes here. #}
-        {# TODO: Integrate as many CSS files as possible. Ideally #}
-        {# have just styles.css plus any conditional stylesheets. #}
-        <link rel="stylesheet" href="/static/css/reset.css">
-        <link rel="stylesheet" href="/static/css/basic.css">
         <link rel="stylesheet" href="/static/css/styles.css">
-        <link rel="stylesheet" href="/static/css/shadowbox.css">
-        <link rel="stylesheet"
-            href="/static/css/jquery.jscrollpane.css">
-        <link rel="stylesheet" href="/static/css/smoothDivScroll.css">
-        {# These IE styles will only apply if the user views the site #}
-        {# in IE without the required Chrome Frame plug-in.           #}
+        {# These IE styles will only load if the user views the site #}
+        {# in an older IE without the required Chrome Frame plug-in. #}
         <!--[if IE 7]>
             <link rel="stylesheet" href="/static/css/ie7.css">
         <![endif]-->
