--- a/gobotany/static/css/ie7.css
+++ b/gobotany/static/css/ie7.css
@@ -1,49 +1,63 @@
-/*////////////////////////////////*/
-/* IE7 Stylesheet */
-/*////////////////////////////////*/
-
+/*** Go Botany IE7 styles file ***
+ Please edit only the .scss source and use Compass to auto-generate the .css.
+ The generated .css is kept in the repository to allow easy deployment.
+ */
 /**Global Styles**/
+/* line 7, ../sass/ie7.scss */
 nav #search {
-    width: 237px;
-}
-nav #search input {
-    float: right;
+  width: 237px;
 }
 
+/* line 10, ../sass/ie7.scss */
+nav #search input {
+  float: right;
+}
 
 /*////////////////////////////////*/
 /* Home page */
 /*////////////////////////////////*/
-
+/* line 19, ../sass/ie7.scss */
 #banner #inner {
-    border: 6px solid #fff;
+  border: 6px solid #fff;
 }
+
+/* line 22, ../sass/ie7.scss */
 #banner #overlay {
-    background: url(../images/layout/white80.png) repeat;
+  background: url(../images/layout/white80.png) repeat;
 }
 
 /*/////////////////////////////*/
 /*Inside App pages*/
 /*////////////////////////////*/
+/* line 29, ../sass/ie7.scss */
 .list-item {
-    border-top: 1px solid #eeeddf;
-}
-.list-item.last {
-    border-bottom: 1px solid #eeeddf;
+  border-top: 1px solid #eeeddf;
 }
 
+/* line 32, ../sass/ie7.scss */
+.list-item.last {
+  border-bottom: 1px solid #eeeddf;
+}
+
+/* line 36, ../sass/ie7.scss */
 .img-gallery .controls {
-    margin: 12px 0 0 75px;
-    text-align: center;
+  margin: 12px 0 0 75px;
+  text-align: center;
 }
+
+/* line 40, ../sass/ie7.scss */
 .controls a {
-    display: block;
-    float: left;
+  display: block;
+  float: left;
 }
+
+/* line 44, ../sass/ie7.scss */
 .controls a.next {
-    margin: 0 0 0 2px;
-    background: url(../images/icons/next.png) 0 0 no-repeat transparent;
+  margin: 0 0 0 2px;
+  background: url(../images/icons/next.png) 0 0 no-repeat transparent;
 }
+
+/* line 48, ../sass/ie7.scss */
 .controls a.prev {
-    background: url(../images/icons/prev.png) 0 0 no-repeat transparent;
+  background: url(../images/icons/prev.png) 0 0 no-repeat transparent;
 }
