Small screens: correct height of search results sidebar.
Move the inline style out of the template for the full screen version and
override it for the small screen version. Also adjust the comments atop
the main style sheet file and the reset styles so that the compiled
styles file comments read better. (#174)

--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -125,7 +125,7 @@
                 {% endif %}
             </div>
 
-            <div id="sidebar" style="height: 515px;">
+            <div id="sidebar">
                 {% include "simplekey/_sidebar_items.html" %}
             </div>
             <div class="clearit"></div>
