Small screens: Levels 1 and 2 pages: improve layouts and spacing.
For portrait widths, start the group and subgroup text below the
image galleries, but on landscape widths, flow them alongside.
Align buttons under galleries. Trim presentation of detail items.
Omit the 'take me back a level' link. Eliminate horizontal
scrolling. (#174)

--- a/gobotany/simplekey/templates/simplekey/_simplekey_video_link.html
+++ b/gobotany/simplekey/templates/simplekey/_simplekey_video_link.html
@@ -1,4 +1,4 @@
-        <a class="video"
+        <span class="section-title"><a class="video"
             href="http://www.youtube.com/embed/{{ youtube_id }}?autoplay=1&amp;rel=0&amp;hd=1&amp;modestbranding=1">View
-            a short video about this {{ item_type }}</a>
+            a video about this {{ item_type }}</a></span>
 
