--- a/gobotany/static/sass/styles.scss
+++ b/gobotany/static/sass/styles.scss
@@ -2887,7 +2887,7 @@ $tooltip-arrow-rotation: 225deg;
         width: 310px;
     }
     #sidebar {
-        width: 304px;
+        width: 302px;
     }
     #home #banner #overlay {
         top: 115px;
@@ -2932,7 +2932,7 @@ $tooltip-arrow-rotation: 225deg;
         width: 470px;
     }
     #sidebar {
-        width: 464px;
+        width: 462px;
     }
     #home #banner #overlay {
         top: 172px;
@@ -3219,7 +3219,10 @@ $tooltip-arrow-rotation: 225deg;
     #sidebar .section .get-help-btn, #sidebar .section .view-map-btn {
         margin-bottom: 0;
     }
-    .app h2, .app p.tip, .app .list-item {
+    .app #main {
+        margin-bottom: 14px;
+    }
+    .app h2, .app p.tip, .app .list-item, .app #main p {
         margin-left: $smallscreen-side-margin;
         margin-right: $smallscreen-side-margin;
     }
